# llm_stardew_valley

./: .gitignore  Characters.md  GIFT_SYSTEM.md  GIFT_SYSTEM_ENHANCEMENT.md  README.md  llm_stardew_valley.sln
.cursor/rules/: character_personalities.mdc  client_mod.mdc  project_vision.mdc  server_api.mdc
.github/: copilot-instructions.md
.github/prompts/: backend_fastapi_server.prompt.md  backend_web_auth.prompt.md  character_personalities.prompt.md  client_dialogue_logic.prompt.md  client_server_communication.prompt.md  project_overview.prompt.md  smapi_modding_fundamentals.prompt.md  technical_stack.prompt.md
StardewEchoes/: Class1.cs  ModEntry.cs  StardewEchoes.csproj  UpgradeLog.htm  manifest.json
StardewEchoes/Backup/: StardewEchoes.sln
StardewEchoes/ClassLibrary1/: ModEntry.cs  manifest.json  (+1 more)
api/: .env.example  MEMORY_SYSTEM.md  README.md  clean_database.py  clean_memory.py  init_db.sql  pyproject.toml  setup.py
api/app/: config.py  main.py
api/app/data/: __init__.py  gift_preferences.py
api/app/models/: request.py
api/app/routers/: dialogue.py  monitoring.py  websocket_router.py
api/app/services/: llm_service.py  memory_service.py
api/app/services/memory/: __init__.py  analysis_service.py  conversation_service.py  emotional_state_service.py  entity_service.py  memory_consolidation_service.py  personality_service.py  vector_service.py
api/app/templates/: monitoring_dashboard.html  player_npc_detail.html
api/app/websockets/: realtime.py
api/prisma/: schema.prisma
api/prisma/migrations/20250626210905_add_emotional_metrics/: migration.sql
api/prisma/migrations/20250627002727_init/: migration.sql
api/prisma/migrations/20250627004600_add_human_memory_system/: migration.sql
api/prisma/migrations/20250627233735_update_emotional_state_per_player/: migration.sql
api/tests/: __init__.py  conftest.py  test_dialogue_api.py  test_emotional_state_service.py  test_vector_service.py
(+6 files in other folders)
