[tool.poetry]
name = "stardew-echoes-api"
version = "0.1.0"
description = "API for Stardew Valley dialogue system with AI memory"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
prisma = "^0.11.0"
litellm = "^1.35.2"
openai = ">=1.0.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0"
numpy = "^1.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.pytest.mock]
mock_use_standalone_module = true
